# pyai-lmstudio-provider

./: .gitignore  README.md  pyproject.toml
src/pydantic_ai_lmstudio_provider/: __init__.py  lmstudio.py
