[project]
name = "pydantic-ai-lmstudio-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles 'Nik' Nichols", email = "nik@vizionikmedia.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai-slim[openai]>=1.73.0",
    "pydantic-ai[openai]>=1.73.0",
]

[project.scripts]
pydantic-ai-lmstudio-provider = "pydantic_ai_lmstudio_provider:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
